src/k8s/argocd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: headnet-ca
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.headnet.levizitting.com
      secretName: argocd-headnet-tls
  rules:
    - host: argocd.headnet.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
